--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "bamazonCustomer.js",
   "dependencies": {
+    "console-table-printer": "^1.0.0-beta18",
     "inquirer": "^6.4.1",
     "mysql": "^2.17.1"
   },
